--- a/CSS/style.css
+++ b/CSS/style.css
@@ -27,7 +27,12 @@ body {
 }
 .accordion__icon {
   font-size: 20px;
-  margin-right: 10px;
+  padding-left: 10px;
+  height: 24px;
+  width: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .accordion__title {
   flex: 1;
