--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -35,7 +35,12 @@ body {
 
   &__icon {
     font-size: 20px;
-    margin-right: 10px;
+    padding-left: 10px;
+    height: 24px;
+    width: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &__title {
